Switch user, increase tm, debug
Enable AMI: Added a blockinfile task to ensure the [general] section in /etc/asterisk/manager.conf is present and enabled, and listening on port 5038.

Run as asterisk User: Added become: yes and become_user: asterisk to the task that runs ./start_asterisk start.

Increased Timeout: Changed timeout: 30 to timeout: 60 in the wait_for task.

Debug Tasks: Added two tasks to show the output of ps aux | grep asterisk after the start script runs. This might give clues if Asterisk isn't starting properly.

--- a/roles/freepbx/tasks/main.yml
+++ b/roles/freepbx/tasks/main.yml
@@ -1,9 +1,11 @@
 ---
+
+
 - name: Download FreePBX tarball ({{ fpbx_ver }})
   ansible.builtin.get_url:
     url: "http://mirror.freepbx.org/modules/packages/freepbx/freepbx-{{ fpbx_ver }}-latest.tgz"
     dest: "/usr/src/freepbx-{{ fpbx_ver }}-latest.tgz"
-    mode: "0644"
+    mode: '0644'
   register: download_result
   until: download_result is succeeded
   retries: 3
@@ -13,7 +15,7 @@
   ansible.builtin.file:
     path: /usr/src/freepbx
     state: directory
-    mode: "0755"
+    mode: '0755'
 
 - name: Unpack FreePBX tarball
   ansible.builtin.unarchive:
@@ -27,6 +29,30 @@
     path: "/usr/src/freepbx-{{ fpbx_ver }}-latest.tgz"
     state: absent
 
+
+
+- name: Ensure AMI is enabled and listening in manager.conf
+  ansible.builtin.blockinfile:
+    path: /etc/asterisk/manager.conf
+    block: |
+      [general]
+      enabled = yes
+      webenabled = yes ; Optional: if needed for Web AMI later
+      port = 5038
+      bindaddr = 0.0.0.0 ; Listen on all interfaces, or use 127.0.0.1 if preferred
+      ; Add a temporary admin user for testing connection if needed, though wait_for only checks port
+      ; [admin]
+      ; secret = temp_password
+      ; read = system,call,log,verbose,command,agent,user,config,command,dtmf,reporting,cdr,dialplan,originate
+      ; write = system,call,log,verbose,command,agent,user,config,command,dtmf,reporting,cdr,dialplan,originate
+    marker: "
+    create: yes
+    owner: asterisk
+    group: asterisk
+    mode: '0640'
+  notify: Reload asterisk
+
+
 - name: Ensure Asterisk service (systemd) is stopped before using start_asterisk script
   ansible.builtin.systemd:
     name: asterisk
@@ -37,17 +63,34 @@
   ansible.builtin.command:
     cmd: ./start_asterisk start
     chdir: /usr/src/freepbx
+
+  become: yes
+  become_user: asterisk
   register: start_asterisk_script_run
   changed_when: "'Asterisk Started' in start_asterisk_script_run.stdout"
   failed_when: start_asterisk_script_run.rc != 0
+
+- name: Debug Show Asterisk processes after start script
+  ansible.builtin.command:
+    cmd: ps aux | grep asterisk
+  register: ps_asterisk
+  changed_when: false
+  when: start_asterisk_script_run is succeeded
+
+- name: Debug Print Asterisk process list
+  ansible.builtin.debug:
+    var: ps_asterisk.stdout_lines
+  when: start_asterisk_script_run is succeeded
+
 
 - name: Wait for Asterisk Manager Interface (AMI) to be available
   ansible.builtin.wait_for:
     port: 5038
     host: 127.0.0.1
-    delay: 5
-    timeout: 30
+    delay: 10
+    timeout: 60
   when: start_asterisk_script_run.changed
+
 
 - name: Create potentially required empty Asterisk config files
   ansible.builtin.file:
@@ -55,7 +98,7 @@
     state: touch
     owner: asterisk
     group: asterisk
-    mode: "0664"
+    mode: '0664'
   with_items:
     - modules.conf
     - cdr.conf
@@ -66,13 +109,11 @@
     chdir: /usr/src/freepbx
     creates: /etc/freepbx.conf
   register: fpbx_install_result
-
   failed_when: fpbx_install_result.rc != 0 and 'Successfully created Asterisk Manager user' not in fpbx_install_result.stdout
 
 - name: Set ownership and permissions using fwconsole chown
   ansible.builtin.command:
     cmd: fwconsole chown
-
   register: fwconsole_chown
   changed_when: "'Taking too long? Customize the chown command' in fwconsole_chown.stdout"
   failed_when: fwconsole_chown.rc != 0
@@ -88,11 +129,9 @@
     - downloadinstall sysadmin
     - downloadinstall userman
     - downloadinstall pm2
-
     - downloadinstall certman
     - downloadinstall api
     - downloadinstall ucp
-
     - downloadinstall announcements
     - downloadinstall backup
     - downloadinstall blacklist
@@ -141,7 +180,7 @@
     dest: /etc/systemd/system/freepbx.service
     owner: root
     group: root
-    mode: "0644"
+    mode: '0644'
   notify: Reload systemd
 
 - name: Enable and ensure FreePBX service is started (via fwconsole)
